3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Server can now be used as a Windows server, with command-line options
 -regsrv (register server and exit), -unregsrv (unregister server and exit)
 and -srv (should not be used directly, for the service control manager call).
server/init.c: add command-line options.
server/main.c: loop is no more infinite under Windows. Save and clean after it, too.
server/win32.c: add service routines.
Ryo 2005-06-22

common/living.c: Print correct message when (un-)wearing items with negative
   luck.
Andreas Kirschbaum 2005-06-14

include/living.h: Patch from Kari Pahula to remove obsolete variable
   declarations.
Andreas Kirschbaum 2005-06-01

server/skill_util.c: Print correct permanent experience ratio for experience
   values >2 billion.
Andreas Kirschbaum 2005-05-22

server/apply.c: Do not unlock LAMP items when turning them on or off.
server/apply.c: Fix CONVERTER items with slaying "money" to trigger for MONEY
   items only.
server/player.c: Generate proper plural name for player's gravestones.
Andreas Kirschbaum 2005-05-21

Ensure that object->msg always has a trailing \n character. This is necessary
to prevent corrupted map files.
plugin/plugin_python.c: Add trailing \n to message set by
   CFPython.SetMessage() if not already present.
server/plugins.c: Add trailing \n to message set by HOOK_TELEPORTOBJECT if not
   already present.
server/rune.c: Add trailing \n to rune messages.
Andreas Kirschbaum 2005-05-21

Apply qal21's patch [ #1205421 ]: Implement new Python functions:
GetArchType, GetFacing, GetLevel.
plugin/plugin_python.c, plugin/include/plugin_python.h: Add new functions.